--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">News Nuggets</string>
+    <string name="no_news">No news as of now\nPlease check after some time!</string>
 </resources>
